Add multi-company support, admin console, hotel-only billing
- Multi-company isolation: backend derives company from authenticated user; all queries/saves filtered by company
- SUPER_ADMIN console for managing companies, users, and platform stats
- Remove customer management (frontend + backend endpoints); keep customer table + walk-in row for invoice FK
- Hotel-only: shopType dropdown defaults to Hotel; remove Customers menu/columns/stat
- Company logo upload/remove APIs and UI
- Convert application.yml to application.properties
- Fix VoiceServiceAsyncTest for company-scoped repository signatures